deployment.t.yaml
##############
# Auto-Generated : ${DATE}
##############

apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astro
  template:
    metadata:
      labels:
        app: astro
    spec:
      containers:
        - name: astro
          image: ${GITUSER}/gitops:${BUILD}-${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
