deployment.yaml
# Auto-Generated Build:1.0 @ Thu Mar 14 22:13:07 IST 2024

apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: astro-pod
  template:
    metadata:
      labels:
        app: astro-pod
    spec:
      containers:
        - name: astro
          image: ginedecoen/gitops:1.0-8d7f2b74d68a4fed54f4ab1abaa50a11854ad55a
          imagePullPolicy: Always
          ports:
            - containerPort: 80
