service.yaml
# Auto-Generated Build:1.0 @ Thu Mar 14 17:25:38 IST 2024

apiVersion: v1
kind: Service
metadata:
  name: astro
spec:
  type: NodePort
  selector:
    app: astro
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 31000
